<resources>
    <string name="app_name">My Class</string>
    <string name="my_class">My Class</string>
    <string name="lorem_ipsum"><![CDATA[Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took ]]></string>
    <string name="lets">Let\'s Get Started</string>
    <string name="label_login">Login</string>
    <string name="label_login_to_your_account">Login to your account - enjoy exclusive features and many more</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="already_account">Already have account? Login</string>
    <string name="dont_have_account">Don’t have account? Register</string>
    <string name="label_register">Register</string>
    <string name="label_create_your_acc">Create your account - enjoy our services with most updated feature.</string>
    <string name="register_name">Name</string>
    <string name="school">School</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="name">Nama</string>
    <string name="name2">Gojo Kiko</string>
    <string name="photo">Photo</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile">Profile</string>
    <string name="phone">Phone</string>
    <string name="phone2">+62 123-4567-8907</string>
    <string name="school2">SMKN 9 Semarang</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_password">Edit Password</string>
    <string name="logout">Logout</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="save_changes">Save Changes</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="profile_friend">Profile Friend</string>
    <string name="poke">Poke</string>
    <string name="message">Message</string>
    <string name="no_notification">Tidak ada notifikasi</string>
    <string name="logout2">Apakah Anda yakin ingin logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_pilih_school">Pilih school</string>
    <string name="label_data_is_empty">data is empty\n</string>

    <string name="label_logging_in">Logging In...</string>
    <string name="label_register_in">Register In...</string>
    <string name="label_success">Success</string>
    <string name="error_name_cannot_be_empty">Name cannot be empty</string>
    <string name="error_photo_cannot_be_empty">Photo cannot be empty</string>
    <string name="error_school_cannot_be_empty">School cannot be empty</string>
    <string name="error_bio_cannot_be_empty">Bio cannot be empty</string>
    <string name="error_phone_cannot_be_empty">Phone cannot be empty</string>
    <string name="error_password_cannot_be_empty">Password cannot be empty</string>
    <string name="title_insert_photo">Insert Photo</string>
    <string name="error_password_confirm_cannot_be_empty">Password cannot be empty</string>
    <string name="error_unknown">ERROR</string>

    <array name="label_image_source">
        <item>Take from camera</item>
        <item>Insert from gallery</item>
    </array>
</resources>