<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFriendActivity">

    <ImageView
        android:id="@+id/btn_back"
        style="@style/text_color"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/photo"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/kanit_bold"
        android:text="@string/profile_friend"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toStartOf="@+id/btn_more"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_more"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/photo"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="ImageContrastCheck" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit_profile"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_entry"
        android:drawableStart="@drawable/baseline_pan_tool_alt_24"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/poke"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_message"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_password"
        android:drawableStart="@drawable/baseline_chat_24"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toEndOf="@+id/btn_edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_profile"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/img_profile_detail_friend"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile"
        android:contentDescription="@string/photo"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_color"
        android:layout_marginStart="12dp"
        android:text="@string/name"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@+id/txt_name_friend"
        app:layout_constraintStart_toEndOf="@+id/img_profile_detail_friend"
        app:layout_constraintTop_toTopOf="@+id/img_profile_detail_friend" />

    <TextView
        android:id="@+id/txt_name_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_color"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/name2"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toEndOf="@+id/img_profile_detail_friend"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/img_phone_detail_friend"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/baseline_local_phone_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_detail_friend"
        android:contentDescription="@string/photo"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_color"
        android:layout_marginStart="12dp"
        android:text="@string/phone"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@+id/txt_phone_friend"
        app:layout_constraintStart_toEndOf="@+id/img_phone_detail_friend"
        app:layout_constraintTop_toTopOf="@+id/img_phone_detail_friend"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/txt_phone_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_color"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/phone2"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toEndOf="@+id/img_phone_detail_friend"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/img_school_detail_friend"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/baseline_home_work_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_phone_detail_friend"
        android:contentDescription="@string/photo"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/txt_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_color"
        android:layout_marginStart="12dp"
        android:text="@string/school"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@+id/txt_school_friend"
        app:layout_constraintStart_toEndOf="@+id/img_school_detail_friend"
        app:layout_constraintTop_toTopOf="@+id/img_school_detail_friend"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/txt_school_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_color"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/school2"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toEndOf="@+id/img_school_detail_friend"
        app:layout_constraintTop_toBottomOf="@+id/txt_school"
        tools:ignore="VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>
