<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <ImageView
        android:id="@+id/btn_back"
        style="@style/text_color"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/photo"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="@font/kanit_bold"
        android:text="@string/edit_profile"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/img_profile_detail_friend"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/photo"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <TextView
        android:id="@+id/txt_name"
        style="@style/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/name"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@+id/et_name"
        app:layout_constraintStart_toEndOf="@+id/img_profile_detail_friend"
        app:layout_constraintTop_toTopOf="@+id/img_profile_detail_friend" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/img_profile_detail_friend"
        app:layout_constraintTop_toBottomOf="@+id/txt_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name2"
            android:textColor="@color/black"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/img_phone_detail_friend"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/photo"
        android:src="@drawable/baseline_local_phone_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_detail_friend"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/txt_phone"
        style="@style/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/phone"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@+id/et_phone"
        app:layout_constraintStart_toEndOf="@+id/img_phone_detail_friend"
        app:layout_constraintTop_toTopOf="@+id/img_phone_detail_friend" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_phone"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/img_phone_detail_friend"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone2"
            android:textColor="@color/black"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/img_school_detail_friend"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/photo"
        android:src="@drawable/baseline_home_work_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_phone_detail_friend"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/txt_school"
        style="@style/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/school"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@+id/et_school"
        app:layout_constraintStart_toEndOf="@+id/img_school_detail_friend"
        app:layout_constraintTop_toTopOf="@+id/img_school_detail_friend"
        tools:ignore="VisualLintBounds" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_school"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/img_school_detail_friend"
        app:layout_constraintTop_toBottomOf="@+id/txt_school"
        tools:ignore="VisualLintBounds">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school2"
            android:textColor="@color/black"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit_profile"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_entry"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_school"
        tools:ignore="VisualLintButtonSize,VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>